# AoC2019

./: AoC2019.cabal  CHANGELOG.md  LICENSE  README.md  run  stack.yaml
app/: Main.hs
benchmark/: Main.hs
input-data/: 01b.txt  02b.txt  03b.txt  04b.txt  05b.txt  06b.txt  07b.txt  08b.txt  09b.txt  10b.txt  11b.txt  12b.txt  13b.txt  14b.txt  15b.txt  16b.txt  17b.txt  18b.txt  19b.txt  1b.txt  20b.txt  21b.txt  22b.txt  23b.txt  24b.txt  25b.txt  2b.txt  4b.txt  5b.txt  6b.txt  7b.txt  8b.txt  9b.txt
src/: AoC2019.hs  CGC.hs  Day.hs  Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Parsing.hs  Queue.hs  Util.hs
test/: Spec.hs
test-data/: 10a.txt  10b.txt  11a.txt  12a.txt  12b.txt  13a.txt  14a.txt  14b.txt  15a.txt  15b.txt  16a.txt  16b.txt  1a.txt  1b.txt  2a.txt  2b.txt  3a.txt  3b.txt  4a.txt  4b.txt  5a.txt  5b.txt  6a.txt  6b.txt  7a.txt  7b.txt  8a.txt  9a.txt  9b.txt  README.md
