cabal-version: 2.0
name: AoC2019
version: 0.0.0
license: MIT
license-file: LICENSE
copyright: 2019 Meck
maintainer: Johan@meck.se
author: Meck
tested-with: ghc ==8.6.5
synopsis: Solutions to advent of code 2019
description:
    Solutions to advent of code 2019
build-type: Simple
extra-doc-files: README.md
                 CHANGELOG.md

library
    exposed-modules:
        AoC2019
        Day1
        Day2
        Day3
        Day4
        Day5
        Day6
        Day7
        Day8
        Day9
        Day10
        Day11
        Day12
        Day13
        Day14
        Day15
        Day16
        Day17
        Day18
        Day19
        Day20
        Day21
        Day22
        Day23
        Day24
        Day25
    other-modules:
        Util
        CGC
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall -Wincomplete-uni-patterns
                 -Wincomplete-record-updates -Wcompat -Widentities
                 -Wredundant-constraints -fhide-source-paths -Wmissing-export-lists
                 -Wpartial-fields
    build-depends:
        base ^>=4.12.0.0,
        text -any,
        containers -any,
        split -any,
        mtl -any,
        vector -any

executable AoC2019
    main-is: Main.hs
    hs-source-dirs: app
    default-language: Haskell2010
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
                 -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
                 -Widentities -Wredundant-constraints -fhide-source-paths
                 -Wmissing-export-lists -Wpartial-fields
    build-depends:
        base ^>=4.12.0.0,
        AoC2019 -any

test-suite AoC2019-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    default-language: Haskell2010
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
                 -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
                 -Widentities -Wredundant-constraints -fhide-source-paths
                 -Wmissing-export-lists -Wpartial-fields
    build-depends:
        base ^>=4.12.0.0,
        tasty -any,
        tasty-hunit -any,
        text -any,
        AoC2019 -any

benchmark AoC2019-benchmark
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: benchmark
    default-language: Haskell2010
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
                 -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
                 -Widentities -Wredundant-constraints -fhide-source-paths
                 -Wmissing-export-lists -Wpartial-fields
    build-depends:
        base ^>=4.12.0.0,
        gauge -any,
        AoC2019 -any
